[package]
name = "rover-http"
version = "0.0.0"
edition = "2021"

publish = false

[features]
test = ["mockall"]

[dependencies]
ctor = "0.6.3"
buildstructor = { workspace = true }
bytes = "1.8.0"
derive-getters = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
mockall = { workspace = true, optional = true }
reqwest = { workspace = true, features = [
    "blocking",
    "brotli",
    "gzip",
    "json",
    "rustls-no-provider",
    "socks",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rover-tower = { workspace = true, features = ["test"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
httpmock = { workspace = true }
rstest = { workspace = true }
speculoos = { workspace = true }

[lints]
workspace = true
