[package]
authors = ["Apollo Developers <opensource@apollographql.com>"]
description = "Schema analysis and exploration for the Rover CLI"
edition = "2024"
name = "rover-schema"
version = "0.0.0"

publish = false

[dependencies]
apollo-compiler = { workspace = true }
bon = { workspace = true }
derive-getters = { workspace = true }
heck = { workspace = true }
itertools = { workspace = true }
rover-studio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
speculoos = { workspace = true }

[lints]
workspace = true
