[package]
authors = ["Apollo Developers <opensource@apollographql.com>"]
description = "Schema analysis and exploration for the Rover CLI"
edition = "2024"
name = "rover-schema"
version = "0.0.0"

publish = false

[dependencies]
apollo-compiler = { workspace = true }
itertools = { workspace = true }
pathfinding = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
speculoos = { workspace = true }

[lints]
workspace = true
