[package]
name = "rover-std"
version = "0.1.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"

publish = false

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
console = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "rt"]}
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
speculoos = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }