[package]
name = "rover-storage"
version = "0.0.0"
edition = "2024"

publish = false

[features]
testing = ["mockall"]

[dependencies]
bon = { workspace = true }
fs-mistrust = { workspace = true }
keyring = { workspace = true, features = ["apple-native", "windows-native", "linux-native"] }
mockall = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
speculoos = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
