[package]
name = "rover-storage"
version = "0.0.0"
edition = "2024"

publish = false

[dependencies]
bon = { workspace = true }
fs-mistrust = { workspace = true }
keyring-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
speculoos = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
