[package]
name = "rover-studio"
version = "0.0.0"
edition = "2021"

publish = false

[features]
cargo-clippy = []

[dependencies]
bytes = { workspace = true }
buildstructor = { workspace = true }
graphql_client = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
houston = { workspace = true }
rover-graphql = { workspace = true }
rover-http = { workspace = true }
tower = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rstest = { workspace = true }
speculoos = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-test = { workspace = true }
tower-test = { workspace = true }
