[package]
name = "rover-studio"
version = "0.0.0"
edition = "2021"

publish = false

[dependencies]
bytes = { workspace = true }
buildstructor = { workspace = true }
derive-getters = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
houston = { workspace = true }
rover-http = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tower = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
rover-http = { workspace = true, features = ["test"] }
rover-tower = { workspace = true, features = ["test"] }
rstest = { workspace = true }
speculoos = { workspace = true }

[lints]
workspace = true
