[package]
name = "rover-tower"
version = "0.0.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"

publish = false

[features]
test = ["mockall", "paste"]

[dependencies]
futures = { workspace = true }
mockall = { workspace = true, optional = true }
paste = { workspace = true, optional = true }
tower = { workspace = true }

