[package]
name = "sputnik"
version = "0.0.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"

publish = false

[dependencies]
camino = "1"
ci_info = { version = "0.14", features = ["serde-1"] }
git2 = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "socks"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
url = "2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
wsl = "0.1"

[dev-dependencies]
assert_fs = "1.0"
