[package]
name = "sputnik"
version = "0.0.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"

publish = false

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
ci_info = { workspace = true, features = ["serde-1"] }
reqwest = { workspace = true, default-features = false, features = ["blocking", "socks"] }
rover-client = { workspace = true }
rover-std = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
wsl = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
