[package]
name = "sputnik"
version = "0.0.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"

publish = false

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
ci_info = { workspace = true, features = ["serde-1"] }
http = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "socks"] }
rover-client = { workspace = true }
rover-http = { workspace = true }
rover-std = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
wsl = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
assert_fs = { workspace = true }
httpmock = { workspace = true }
rstest = { workspace = true }
speculoos = { workspace = true }
reqwest = { workspace = true }
