[package]
name = "supergraph-config"
version = "0.1.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"
license ="MIT"

[dependencies]
camino = { version = "1", features = [ "serde1" ] }
fed-types = { git = "https://github.com/apollographql/rover", rev = "acb560a9b6ee142d08f87e37443be8ad6e158e7c" }
log = "0.4"
serde = "1"
serde_yaml = "0.8"
thiserror = "1"
url = { version = "2", features = [ "serde" ] }

[dev-dependencies]
assert_fs = "1"