[package]
name = "binstall"
version = "0.1.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"

publish = false

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
directories-next = { workspace = true }
futures = { workspace = true }
flate2 = { workspace = true }
http = { workspace = true }
rover-http = { workspace = true }
rover-std = { workspace = true }
rover-tower = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "gzip", "rustls-no-provider", "socks"] }
thiserror = { workspace = true }
tar = { workspace = true }
tempfile = {  workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["decompression-br", "decompression-gzip"] }
tracing = { workspace = true }
url = { workspace = true }


[target.'cfg(target_os = "windows")'.dependencies]
cc = "1"
winapi = "0.3"
winreg = "0.55"

[dev-dependencies]
assert_fs = { workspace = true }
httpmock = { workspace = true }
predicates = { workspace = true }
rover-http = { workspace = true, features = ["test"] }
rover-tower = { workspace = true, features = ["test"] }
rstest = { workspace = true }
rustls = { workspace = true }
sealed_test = { workspace = true }
serial_test = { workspace = true }
speculoos = { workspace = true }
tokio = { workspace = true }
tar = { workspace = true }
